@@ -159,9 +159,10 @@ class TestMergeDirective(tests.TestCase):
         self.assertIs(None, md4.patch_type)
 
 
-EMAIL1 = """To: pqm@example.com
-From: J. Random Hacker <jrandom@example.com>
+EMAIL1 = """From: "J. Random Hacker" <jrandom@example.com>
 Subject: Commit of rev2a
+To: pqm@example.com
+User-Agent: Bazaar \(.*\)
 
 # Bazaar merge directive format 1
 # revision_id: rev2a
@@ -172,9 +173,10 @@ Subject: Commit of rev2a
 """
 
 
-EMAIL2 = """To: pqm@example.com
-From: J. Random Hacker <jrandom@example.com>
+EMAIL2 = """From: "J. Random Hacker" <jrandom@example.com>
 Subject: Commit of rev2a with special message
+To: pqm@example.com
+User-Agent: Bazaar \(.*\)
 
 # Bazaar merge directive format 1
 # revision_id: rev2a
